force-app/main/default/objects/Rule_Check__c/Rule_Check__c.object-meta.xml
<CustomObject>
    <description>One rule evaluation within an Audit Case. Each record captures the outcome of replaying a single policy rule against the reconstructed facts and evidence for an audited loan.</description>
    <label>Rule Check</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Rule Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>