force-app/main/default/objects/Rule_Check__c/fields/Audit_Case__c.field-meta.xml
<CustomField>
    <fullName>Audit_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The parent Audit Case this rule check belongs to.</description>
    <inlineHelpText>The Audit Case under which this policy rule was evaluated.</inlineHelpText>
    <label>Audit Case</label>
    <referenceTo>Audit_Case__c</referenceTo>
    <relationshipLabel>Rule Checks</relationshipLabel>
    <relationshipName>Rule_Checks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>