force-app/main/default/objects/Rule_Check__c/fields/Evidence_References__c.field-meta.xml
<CustomField>
    <fullName>Evidence_References__c</fullName>
    <description>JSON array of Evidence_Item__c IDs</description>
    <inlineHelpText>JSON array of Evidence Item record IDs that support this rule evaluation.</inlineHelpText>
    <label>Evidence References</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>