force-app/main/default/objects/Rule_Check__c/fields/Exception_Approver__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approver__c</fullName>
    <description>Name or ID of the person who approved the exception at origination time.</description>
    <inlineHelpText>The person who approved the policy exception during original loan processing.</inlineHelpText>
    <label>Exception Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>