force-app/main/default/objects/Rule_Check__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <description>Reason provided for a policy exception, if Outcome is Exception.</description>
    <inlineHelpText>If the outcome is Exception, explain why the exception was granted.</inlineHelpText>
    <label>Exception Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>