force-app/main/default/objects/Rule_Check__c/fields/Fact_References__c.field-meta.xml
<CustomField>
    <fullName>Fact_References__c</fullName>
    <description>JSON array of Reconstructed_Fact__c IDs</description>
    <inlineHelpText>JSON array of Reconstructed Fact record IDs used in this rule evaluation.</inlineHelpText>
    <label>Fact References</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>