force-app/main/default/objects/Rule_Check__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Result of the rule evaluation against reconstructed facts.</description>
    <inlineHelpText>The outcome of replaying this policy rule: Pass, Exception, Violation, or Unverifiable.</inlineHelpText>
    <label>Outcome</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Violation</fullName>
            </value>
            <value>
                <fullName>Unverifiable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>