force-app/main/default/objects/Rule_Check__c/fields/Policy_Rule_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Rule_Version__c</fullName>
    <description>Policy version used for this evaluation. Text ref until Policy_Rule_Version__c object is deployed as Lookup.</description>
    <inlineHelpText>The 18-character ID of the policy rule version used for this evaluation.</inlineHelpText>
    <label>Policy Rule Version</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>