force-app/main/default/objects/Rule_Check__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <description>Detailed explanation of why the rule produced this outcome.</description>
    <inlineHelpText>Explain the reasoning behind the outcome determination.</inlineHelpText>
    <label>Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>