force-app/main/default/objects/Rule_Check__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>Human-readable name of the policy rule evaluated.</description>
    <inlineHelpText>The name of the policy rule that was evaluated.</inlineHelpText>
    <label>Rule Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>